src/assets/styles/cmps/Projects.scss
$normal-breakpoint: 960px;

.projects-container {


    .project-bg-container {
        padding-top: 1.5rem;
        min-height: 90vh;
        width: 100%;
        z-index: -1;

        @media(max-width: $normal-breakpoint) {
            min-height: 100vh;
        }

        .full-img {
            object-fit: cover;
            width: 100%;
            max-width: none;
            height: 108%;
            position: absolute;
            inset: 0% 0% auto;
            will-change: transform;
            transform: translate3d(0px, 5%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
            transform-style: preserve-3d;
            z-index: -1000;
        }

        h1 {
            font-size: 7.5rem;

            @media(max-width: $normal-breakpoint) {
                font-size: 2.5rem;
            }
        }
    }


    .parallax-main {

        height: 100vh;
        position: sticky;
        top: 0;

        div {

            .parallax-effect-div {

                &::before {
                    font-size: 10rem;
                    color: black;
                    background-color: rgb(48, 131, 255);
                    content: "";
                    // background: inherit;
                    // filter: blur(6px);
                    position: absolute;
                    top: -5px;
                    right: -5px;
                    bottom: -5px;
                    left: -5px;
                }

            }
        }
    }
}

